# sicp-graph

./: .gitignore  Makefile  README.md  connectome.py  graph_rank.py  html2markdown.sh  pyproject.toml  sicp.mm  styleanalysis  titles.txt
dirac/: corpus.mm.index  dictionary.dict  dirac.mm  dirac.mm.index  extract_to_sections.py  index.md  metadata.txt
dirac_sections/: corpus.mm  corpus.mm.index  dirac1.md  dirac11.md  dirac12.md  dirac13.md  dirac18.md  dirac19.md  dirac20.md  dirac27.md  dirac28.md  dirac29.md  dirac3.md  dirac30.md  dirac31.md  dirac37.md  dirac38.md  dirac39.md  dirac42.md  dirac43.md  dirac48.md  dirac49.md  dirac5.md  dirac51.md  dirac52.md  dirac53.md  dirac54.md  dirac59.md  dirac60.md  dirac61.md  dirac62.md  dirac66.md  dirac68.md  dirac69.md  dirac7.md  dirac70.md  dirac71.md  dirac73.md  dirac77.md  dirac78.md  (+6 more)
docs/: force.js  graph.html  index.html
html/: book-Z-H-1.html  book-Z-H-10.html  book-Z-H-11.html  book-Z-H-13.html  book-Z-H-16.html  book-Z-H-18.html  book-Z-H-20.html  book-Z-H-21.html  book-Z-H-22.html  book-Z-H-23.html  book-Z-H-25.html  book-Z-H-26.html  book-Z-H-27.html  book-Z-H-29.html  book-Z-H-30.html  book-Z-H-32.html  book-Z-H-33.html  book-Z-H-35.html  book-Z-H-38.html  book-Z-H-5.html  book-Z-H-7.html
markdown/: book-Z-H-1.html.md  book-Z-H-14.html.md  book-Z-H-15.html.md  book-Z-H-17.html.md  book-Z-H-18.html.md  book-Z-H-19.html.md  book-Z-H-2.html.md  book-Z-H-21.html.md  book-Z-H-27.html.md  book-Z-H-29.html.md  book-Z-H-30.html.md  book-Z-H-33.html.md  book-Z-H-35.html.md  book-Z-H-36.html.md  (+3 more)
(+883 files in other folders)
